<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen"
    android:background="#1E1E1E">


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="-400dp"
        android:contentDescription="@string/Ellipse_UI"
        android:src="@drawable/ellipse_19"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintHorizontal_bias="0.0"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="670dp"
        android:contentDescription="@string/Ellipse_UI"
        android:src="@drawable/ellipse_20"
        tools:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

    </ImageView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="263dp"
        android:layout_height="158dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="75dp"
        android:src="@drawable/group_94"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/app_name">

    </ImageView>

    <TextView
        android:id="@+id/OnlineShopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="477dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:letterSpacing="0.14"
        android:text="@string/Best_online_shopping"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="45dp"
        android:textStyle="normal"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toTopOf="parent">

    </TextView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/rectangleBar"
        android:layout_marginTop="802dp"
        android:layout_marginStart="146dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/rectangle_2"
        android:contentDescription="@string/Rectangle_bar"
        tools:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toTopOf="parent">

    </ImageView>


</FrameLayout>